--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,8 +1,9 @@
 {
   "plugins": [
-    "prettier-plugin-tailwindcss",
-    "prettier-plugin-organize-imports"
+    "prettier-plugin-organize-imports",
+    "prettier-plugin-tailwindcss"
   ],
+  "semi": false,
   "organizeImportsSkipDestructiveCodeActions": true,
   "tailwindFunctions": ["classNames"]
 }
