--- a/package.json
+++ b/package.json
@@ -27,10 +27,9 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-tailwindcss": "^3.17.4",
+    "eslint-plugin-import": "^2.29.1",
     "postcss": "^8",
     "prettier": "^3.3.3",
-    "prettier-plugin-organize-imports": "^4.0.0",
     "prettier-plugin-tailwindcss": "^0.6.6",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
