Fix: 修复了prettier失效相关的一些依赖错误

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,6 +1,5 @@
 {
-  "plugins": ["prettier-plugin-tailwindcss"],
   "semi": false,
-  "organizeImportsSkipDestructiveCodeActions": true,
-  "tailwindFunctions": ["classNames"]
+  "tailwindFunctions": ["classNames"],
+  "plugins": ["prettier-plugin-tailwindcss"]
 }
