--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,18 +1,19 @@
 {
-	"extends": [
-		"next/core-web-vitals",
-		"plugin:tailwindcss/recommended",
-		"plugin:import/errors",
-		"plugin:import/warnings"
-	],
-	"plugins": ["import"],
-	"rules": {
-		"import/order": [
-			"error",
-			{
-				"groups": ["builtin", "external", "parent", "sibling", "index"],
-				"newlines-between": "always"
-			}
-		]
-	}
+  "extends": [
+    "next/core-web-vitals",
+    "plugin:import/errors",
+    "plugin:import/warnings",
+    "prettier"
+  ],
+  "plugins": ["import"],
+  "rules": {
+    "@next/next/no-img-element": "off",
+    "import/order": [
+      "error",
+      {
+        "groups": ["builtin", "external", "parent", "sibling", "index"],
+        "newlines-between": "always"
+      }
+    ]
+  }
 }
