--- a/.github/workflows/merge-bot.yml
+++ b/.github/workflows/merge-bot.yml
@@ -19,19 +19,39 @@ jobs:
     runs-on: ubuntu-latest
     name: Merge
     permissions:
-      contents: write
-      pull-requests: write
-      checks: read
+          contents: write
+          pull-requests: write
+          checks: read
     steps:
-      - uses: actions/checkout@v4
-      - name: Integration check
-        uses: squalrus/merge-bot@v0.4.5
-        with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          test: false
-          reviewers: false
-          labels: readyForMerge , waitForMerge
-          blocking_labels: do not merge
-          checks_enabled: true
-          method: rebase
-          delete_source_branch: false
+    - uses: actions/checkout@v4
+    - name: Integration check
+      uses: squalrus/merge-bot@v0.4.5
+      with:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        test: false # 如果想 Debug ，将该项改为 True
+        reviewers: false
+        labels: readyForMerge , waitForMerge
+        blocking_labels: do not merge
+        checks_enabled: true
+        method: rebase
+        delete_source_branch: false
+  rebase:
+    runs-on: ubuntu-latest
+    name: rebase
+    permissions:
+          contents: write
+          pull-requests: write
+          checks: read
+    steps:
+    - uses: actions/checkout@v4
+    - name: Integration check
+      uses: squalrus/merge-bot@v0.4.5
+      with:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        test: false
+        reviewers: false
+        labels: readyForRebase , waitForMerge
+        blocking_labels: do not merge
+        checks_enabled: true
+        method: rebase
+        delete_source_branch: false
